[tool.poetry]
name = "yt-downloader-gui"
version = "0.1.0"
description = ""
authors = ["Shneor <770elmo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
yt-dlp = "^2024.10.22"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
